--- a/TCC/res/layout/main.xml
+++ b/TCC/res/layout/main.xml
@@ -9,27 +9,19 @@
     tools:context=".FilterActivity" >
 
     <Button
-        android:id="@+id/liveModeButton"
+        android:id="@+id/visocor_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/live_mode" />
+        android:text="@string/visocor" />
 
     <Button
-        android:id="@+id/galleryModeButton"
+        android:id="@+id/simulation_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/cameraModeButton"
-        android:layout_below="@+id/cameraModeButton"
-        android:text="@string/from_gallery" />
-
-    <Button
-        android:id="@+id/cameraModeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/liveModeButton"
+        android:layout_below="@+id/visocor_button"
         android:layout_centerHorizontal="true"
-        android:text="@string/from_camera" />
+        android:text="@string/simulation" />
 
 </RelativeLayout>
