Adding all buttons leading to the color highlight filter. Refactoring the FilterActivity. New tests included for all these changes

--- a/TCC/res/layout/main.xml
+++ b/TCC/res/layout/main.xml
@@ -24,4 +24,12 @@
         android:layout_centerHorizontal="true"
         android:text="@string/simulation" />
 
+    <Button
+        android:id="@+id/highlight_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/simulation_button"
+        android:layout_centerHorizontal="true"
+        android:text="@string/color_highlight" />
+
 </RelativeLayout>
