--- a/TCC/res/layout/filter_activity.xml
+++ b/TCC/res/layout/filter_activity.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="75dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:ignore="SelectableText" />
 
     <Spinner
         android:id="@+id/filter_type_spinner"
@@ -27,27 +28,27 @@
         android:visibility="gone" />
 
     <Button
-        android:id="@+id/liveModeButton"
+        android:id="@+id/cameraModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/live_mode" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/from_camera" />
 
     <Button
         android:id="@+id/galleryModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cameraModeButton"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/cameraModeButton"
         android:text="@string/from_gallery" />
 
     <Button
-        android:id="@+id/cameraModeButton"
+        android:id="@+id/liveModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/liveModeButton"
         android:layout_centerHorizontal="true"
-        android:text="@string/from_camera" />
+        android:layout_below="@id/galleryModeButton"
+        android:text="@string/live_mode" />
 
 </RelativeLayout>
