--- a/TCC/res/layout/continous_filter.xml
+++ b/TCC/res/layout/continous_filter.xml
@@ -4,15 +4,16 @@
     android:layout_height="match_parent" >
 
     <org.opencv.android.JavaCameraView
+        android:id="@+id/continous_filter_camera"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/continous_filter_camera" />
-    
+        android:layout_height="fill_parent" />
+
     <SeekBar
         android:id="@+id/continous_filter_intensity_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
