Added button and call for SettingsActivity

--- a/TCC/res/layout/main.xml
+++ b/TCC/res/layout/main.xml
@@ -32,4 +32,12 @@
         android:layout_centerHorizontal="true"
         android:text="@string/color_highlight" />
 
+    <Button
+        android:id="@+id/settings_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/highlight_button"
+        android:layout_centerHorizontal="true"
+        android:text="@string/settings" />
+
 </RelativeLayout>
