--- a/TCC/res/layout/bitmap_filter.xml
+++ b/TCC/res/layout/bitmap_filter.xml
@@ -19,6 +19,8 @@
             android:id="@+id/intensity_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:visibility="gone" />
 
         <Button
