--- a/TCC/res/layout/continous_filter.xml
+++ b/TCC/res/layout/continous_filter.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:visibility="gone" />
 
 </RelativeLayout>
