--- a/TCC/res/layout/settings.xml
+++ b/TCC/res/layout/settings.xml
@@ -25,7 +25,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/default_simulation_filter_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
@@ -36,7 +36,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner1"
+        android:layout_below="@+id/default_simulation_filter_spinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/default_tolerance_values"
