--- a/TCC/res/layout/filter_activity.xml
+++ b/TCC/res/layout/filter_activity.xml
@@ -1,29 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".FilterActivity" >
-
-    <TextView
-        android:id="@+id/filter_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        tools:ignore="SelectableText" />
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp" >
 
     <Spinner
         android:id="@+id/filter_type_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/filter_title"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
         android:entries="@array/filter_options"
         android:visibility="gone" />
 
@@ -31,24 +18,24 @@
         android:id="@+id/cameraModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="@string/from_camera" />
 
     <Button
         android:id="@+id/galleryModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/cameraModeButton"
+        android:layout_centerHorizontal="true"
         android:text="@string/from_gallery" />
 
     <Button
         android:id="@+id/liveModeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/galleryModeButton"
+        android:layout_centerHorizontal="true"
         android:text="@string/live_mode" />
 
 </RelativeLayout>
