--- a/TCC/res/layout/bitmap_filter.xml
+++ b/TCC/res/layout/bitmap_filter.xml
@@ -3,12 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <ImageView
+    <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/filtered_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:scaleType="fitCenter"
         android:contentDescription="@string/filtered_image" />
-
+        
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
