--- a/TCC/res/layout/main_portrait.xml
+++ b/TCC/res/layout/main_portrait.xml
@@ -9,14 +9,6 @@
     tools:context=".FilterActivity" >
 
     <Button
-        android:id="@+id/simulation_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/visocor_button"
-        android:layout_centerHorizontal="true"
-        android:text="@string/simulation" />
-
-    <Button
         android:id="@+id/highlight_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,10 +18,18 @@
 
     <Button
         android:id="@+id/visocor_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/visocor" />
+
+    <Button
+        android:id="@+id/simulation_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/visocor_button"
+        android:layout_centerHorizontal="true"
+        android:text="@string/simulation" />
 
 </RelativeLayout>
