--- a/TCC/res/layout/continous_filter.xml
+++ b/TCC/res/layout/continous_filter.xml
@@ -16,6 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:visibility="gone" />
 
 </RelativeLayout>
