--- a/TCC/res/layout/settings_color_picker.xml
+++ b/TCC/res/layout/settings_color_picker.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="10dp"
+    android:gravity="center"
+    android:layout_marginTop="10dp"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:text="@string/pick_color"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -18,8 +18,6 @@
         android:id="@+id/selected_color"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/selected_color_sample" />
 
@@ -27,7 +25,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/selected_color"
         android:layout_marginTop="5dp"
         android:text="@string/red"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -36,8 +33,6 @@
         android:id="@+id/red_seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp" />
 
@@ -45,7 +40,6 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/red_seekbar"
         android:layout_marginTop="5dp"
         android:text="@string/green"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -54,8 +48,6 @@
         android:id="@+id/green_seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView3"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp" />
 
@@ -63,7 +55,6 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/green_seekbar"
         android:layout_marginTop="5dp"
         android:text="@string/blue"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -72,9 +63,7 @@
         android:id="@+id/blue_seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView4"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp" />
 
-</RelativeLayout>
+</LinearLayout>
